# QNavigationWidget

./: QNavigationTab.cpp  QNavigationTab.h  QNavigationWidget.cpp  QNavigationWidget.h  README.md
Example/: CMakeLists.txt  QNavigationWidgetTest.cpp  QNavigationWidgetTest.h  main.cpp
Src/: Doxyfile  QNavigationTab.cpp  QNavigationTab.h  QNavigationWidget.cpp  QNavigationWidget.h
